# QTX3

./: .gitignore  CMakeLists.txt  QTX3_global.h  QXTree_global.h  README.md  qxtreenode.cpp  qxtreenode.h  tixi_utils.h
demo/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  songmodel.cpp  songmodel.h  songnode.cpp  songnode.h  treeview.cpp  treeview.h
scripts/: __init__.py  generate_qtx3_h.py
scripts/test/: __init__.py  test_generate_qtx3.h.py  test_generate_qtx3_h.py
src/: CMakeLists.txt  QTX3_global.h
src/model/: CMakeLists.txt  qtx3attribute.cpp  qtx3attribute.h  qtx3item.cpp  qtx3item.h  qtx3model.cpp  qtx3model.h  qtx3node.cpp  qtx3node.h  qxtreenode.cpp  qxtreenode.h  xpathtreemodel.cpp  xpathtreemodel.h
src/utils/: CMakeLists.txt  general.cpp  general.h  tixi_utils.cpp  txmacros.h  txutils.cpp  txutils.h
src/widgets/: CMakeLists.txt
test/: CMakeLists.txt
test/model/: CMakeLists.txt  gtest_qxt3node.cpp  qtest_main.cpp  qtest_main.h  qtest_qtx3attribute.cpp  qtest_qtx3attribute.h  qtest_qtx3item.cpp  qtest_qtx3item.h  qtest_qtx3model.cpp  qtest_qtx3model.h  qtest_qtx3node.cpp  qtest_qtx3node.h  qtx3specialtestnode.cpp  qtx3specialtestnode.h  qtx3testcasemodel.cpp  qtx3testcasemodel.h  qxt3nodetest.cpp  qxtreenodetest.cpp  qxtreenodetest.h
test/utils/: CMakeLists.txt  gtest_txutils.cpp  test_txutils.cpp
test/widgets/: CMakeLists.txt
