
set(QTX3_INC ${CMAKE_CURRENT_SOURCE_DIR})
set(QTX3_HDR ${CMAKE_CURRENT_SOURCE_DIR}/QTX3_global.h PARENT_SCOPE)

add_subdirectory(utils)
add_subdirectory(model)
add_subdirectory(widgets)


set(QTX3_INCLUDE ${UTILS_INCLUDE_DIR} ${MODEL_INCLUDE_DIR} ${WIDGETS_INCLUDE_DIR} PARENT_SCOPE)
set(MODEL_INCLUDE_DIR ${MODEL_INCLUDE_DIR} PARENT_SCOPE)
set(UTILS_INCLUDE_DIR ${UTILS_INCLUDE_DIR} PARENT_SCOPE)

set(INSTALL_HEADERS ${MODEL_HEADERS} ${UTILS_HEADERS} ${WIDGETS_HEADERS} PARENT_SCOPE)
string(REPLACE \" \" \";\" INSTALL_HEADERS ${INSTALL_HEADERS})
