file(GLOB_RECURSE UTILS_SRC *.cpp)
file(GLOB_RECURSE UTILS_HEADERS *.h)

add_library(Utils OBJECT ${UTILS_SRC} ${UTILS_HEADERS} ${QTX3_HDR})
target_include_directories(Utils PUBLIC ${QTX3_INC})

list(FILTER UTILS_HEADERS EXCLUDE REGEX "general\.h$")

set(UTILS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
set(UTILS_HEADERS ${UTILS_HEADERS} PARENT_SCOPE)
