file(GLOB_RECURSE WIDGETS_SRC *.cpp)
file(GLOB_RECURSE WIDGETS_HEADERS *.h)

add_library(Widgets OBJECT ${UTILS_SRC} ${WIDGETS_HEADERS} ${QTX3_HDR})
target_include_directories(Widgets PUBLIC ${QTX3_INC})

set(WIDGETS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
set(WIDGETS_HEADERS ${WIDGETS_HEADERS} PARENT_SCOPE)
